Fix text overlapping motive on small screens #9

--- a/src/style/Art.css
+++ b/src/style/Art.css
@@ -1,64 +1,37 @@
-
+.art-container {
+    display: table;
+    width: 100%;
+}
 
 .motive {
-    position: fixed;
-    top: 55%;
-    left: 50%;
-    /* bring your own prefixes */
-    transform: translate(-50%, -50%);
-    margin-left: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+    vertical-align: center;
 }
 
 .text {
-    font-size: 50px;
-    position: fixed;
-    margin-left: 5%;
-    top: 20%;
-    left: 50%;
-    /* bring your own prefixes */
-    transform: translate(-50%, -50%);
+    padding-left: 10%;
+    padding-right: 10%;
+    font-size: 1.5vmax;
     font-weight: bold;
     background-color: #666666;
     -webkit-background-clip: text;
     -moz-background-clip: text;
-    background-clip: text;
     color: transparent;
     text-shadow: rgba(255,255,255,0.5) 0 3px 3px;
-    padding-top: 100px;
-
 }
 
-.audio{
-    position: fixed;
-    top: 85%;
-    left: 50%;
-    /* bring your own prefixes */
-    transform: translate(-50%, -50%);
-
-}
-
-/* The smallest iphone is 320px wide - our design meets the requirements down to that width */
-
-
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 560px) {
-    .text {font-size: 20px;}
+@media screen and (max-width: 400px) {
+    .text {
+        padding-left: 20%;
+        padding-right: 20%;
+    }
 }
 
 @media screen and (max-width: 900px) {
     .text {font-size: 30px;}
 }
 
-@media screen and (max-width: 410px) {
-    .audio{
-        /* Adapting position regarding navbar on smaller devices */
-        margin-left:42px;
-    }
-
-}
-
-
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 890px) {
     .text {font-size: 16px;}
 }
